--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -10,6 +10,10 @@
 
 body {
   background-color: hsl(210, 46%, 95%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
 }
 
 .testimonial {
