--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -76,6 +76,9 @@ body {
 }
 
 @media (min-width: 780px) {
+  body {
+    height: max-content;
+  }
   .testimonial {
     grid-template-columns: repeat(4, 1fr);
   }
