updated media query in style.scss

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -94,6 +94,9 @@ body {
 }
 
 @media(min-width: 780px) {
+  body {
+    height: max-content;
+  }
   .testimonial {
     grid-template-columns: repeat(4, 1fr);
 
